--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+<img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Elon_Musk_Colorado_2022_%28cropped2%29.jpg" alt="elon musk" width="200"
+ height="200">
 <h1>sameer ahmed</h1>
 
 <h2>contact</h2>
@@ -42,6 +44,13 @@
 <dd>72kg</dd>
 
 </dl>
-    
+<br/>
+<h1>social media accouny=t</h1>
+<ul> 
+<li> <a href="#">my facbook</a></li>
+<li><a href="#">my instragram</a></li>
+<li><a href="https://wa.me/03112500392">my whatsapp</a></li>
+<li><a href="https://github.com/sameerlakhati/">my github</a></li>
+</ul>
 </body>
 </html>
